--- a/temp.html
+++ b/temp.html
@@ -87,12 +87,11 @@
 
 <!-- Cards -->
 
-<div class="container mt-5">
-  <h1 class="text-center my-5" id="football">Some Exceptional Heroes</h1>
+<div class="container"></div>
   <div class="row">
     <div class="col">
       <div class="card" style="width: 18rem;">
-        <img  class="my-card-img" src="https://media.gettyimages.com/id/525766028/photo/raul-gonzalez-of-real-madrid-celebrates-after-assisting-the-goal-to-make-it-2-2-location.jpg?s=612x612&w=gi&k=20&c=IpsW_2ade-z0orMhqtwUM-aHaQAvTBfqRT2GjLfVofU=" class="card-img-top" alt="...">
+        <img src="https://media.gettyimages.com/id/525766028/photo/raul-gonzalez-of-real-madrid-celebrates-after-assisting-the-goal-to-make-it-2-2-location.jpg?s=612x612&w=gi&k=20&c=IpsW_2ade-z0orMhqtwUM-aHaQAvTBfqRT2GjLfVofU=" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Raul</h5>
           <p class="card-text">Raúl González Blanco (Spanish pronunciation: [raˈul ɣonˈθaleθ ˈβlaŋko]; born 27 June 1977), known mononymously as Raúl, is a Spanish football manager and former player who played as a forward.....<b>Read More.</b></p>.</p>
@@ -103,8 +102,8 @@
     </div>
 
     <div class="col">
-      <div class="card" style="width: 18rem;">
-  <img  class="my-card-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpX0hz-eQjgHdwiI5Shx8LvbjxilU5aB_kMg&s" class="card-img-top" alt="...">
+      <div class="card" style="width: 18rem;"></div>
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpX0hz-eQjgHdwiI5Shx8LvbjxilU5aB_kMg&s" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">kaka</h5>
     <p class="card-text">Ricardo Izecson dos Santos Leite (Brazilian Portuguese: [ʁiˈkaʁdu iˈzɛksõ duˈsɐ̃tuz ˈlejtʃi]; born 22 April 1982), commonly known as Kaká (Portuguese: [kaˈka] ⓘ) or Ricardo Kaká,[4][5] is a Brazilian former professional footballer who played as an attacking midfielder. In his prime as a playmaker at AC Milan, where he was known for his passing, pace, goalscoring, and dribbling, Kaká was widely regarded as one of the greatest players of his generation.[6][7][8][9]...<b>Read More..
@@ -113,14 +112,12 @@
     <a href="kaka.html" class="btn btn-primary">read history</a>
   </div>
 </div>
-</div>
       
-    
+    </div>
 
     <div class="col">
       <div class="card" style="width: 18rem;">
-        <img  class="my-card-img"
-        src="https://media.gettyimages.com/id/1010804378/photo/25-april-1993-udine-serie-a-calcio-udinese-v-ac-milan-paolo-maldini-of-milan.jpg?s=612x612&w=gi&k=20&c=5JD2anZjA0qOkROx9fhAOYboDh6KOtN88AOGigodlL8=" class="card-img-top" alt="..."  >
+        <img src="https://media.gettyimages.com/id/1010804378/photo/25-april-1993-udine-serie-a-calcio-udinese-v-ac-milan-paolo-maldini-of-milan.jpg?s=612x612&w=gi&k=20&c=5JD2anZjA0qOkROx9fhAOYboDh6KOtN88AOGigodlL8=" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">maldini</h5>
           <p class="card-text">Paolo Cesare Maldini Ufficiale OMRI (Italian pronunciation: [ˈpaːolo malˈdiːni];[6] born 26 June 1968) is an Italian former professional footballer who played primarily as a left-back and centre-back for AC Milan and the Italy national team. He is widely regarded as one of the greatest defenders of all time.[7][8][9][10][11][12] As the Milan and Italy captain for many years, he was nicknamed "Il Capitano".  </p>
@@ -133,99 +130,6 @@
     </div>
 
   </div>
-</div>
+
   
 </div>
-<div class="container">
-<div clas bg-dangers="row">
-
-<div class= bg-warning"col-8">Football is a family of team sports that involve, to varying degrees, kicking a ball to score a goal. Unqualified, the word football generally means the form of football that is the most popular where the word is used. Sports commonly called football include association football (known as soccer in Australia, Canada, South Africa, the United States, and sometimes in Ireland and New Zealand); Australian rules football; Gaelic football; gridiron football (specifically American football, arena football, or Canadian football); International rules football; rugby league football; and rugby union football.[1] These various forms of football share, to varying degrees, common origins and are known as "football codes".</div>
-
-<div class="col-8">
-  <img src="""
-  
-</div>
-
-
-</div>
-<div class="row">
-
-
-<div class="col-8">The history of Ricardo Izecson dos Santos Leite, also known as Kaká, is marked by many accomplishments both on and off the field: 
-  Early career: Kaká started playing for São Paulo at age eight, and made his senior debut in 2001. He led the team to their first Torneio Rio-São Paulo championship. 
-  Transfer to Milan: In 2003, Kaká was signed by AC Milan for $8.5 million. 
-  World Cup appearances: Kaká was selected for Brazil's World Cup squads in 2002, 2006, and 2010. He led the 2010 tournament in assists. 
-  FIFA World Player of the Year: In 2007, Kaká was named FIFA World Player of the Year. 
-  Ballon d'Or: Kaká won the Ballon d'Or in 2007. 
-  Transfer to Real Madrid: In 2009, Kaká transferred to Real Madrid. 
-  Humanitarian work: Kaká became the youngest ambassador of the UN World Food Programme in 2004. 
-  Time 100: Kaká was named in the Time 100 list of the world's most influential people in 2008 and 2009. </div>
-
-<div class="c
-  ol-4"><imgV1
-</img></div>
-
-</div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- <script src="script.js"></script>
-<!-- link to Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-</body>
-</html>
-   
