--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <!-- Link to Bootstrap CSS -->
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
  
-
+ <script src="https://kit.fontawesome.com/d0f9c9b5a5.js" crossorigin="anonymous"></script>
  <!-- link to personal CSS -->
  <link rel="stylesheet" href="style.css">
 </head>
@@ -142,7 +142,7 @@
 <div class= bg-warning"col-8">Football is a family of team sports that involve, to varying degrees, kicking a ball to score a goal. Unqualified, the word football generally means the form of football that is the most popular where the word is used. Sports commonly called football include association football (known as soccer in Australia, Canada, South Africa, the United States, and sometimes in Ireland and New Zealand); Australian rules football; Gaelic football; gridiron football (specifically American football, arena football, or Canadian football); International rules football; rugby league football; and rugby union football.[1] These various forms of football share, to varying degrees, common origins and are known as "football codes".</div>
 
 <div class="col-8">
-  <img src="""
+  
   
 </div>
 
@@ -172,7 +172,35 @@
 
 
 
+<div class="container-fluid bg-dark text-white mt-5 p-5">
+<div class="row">
+<div class="col">
+<h6>
+contact info- 
+</h6>
+<p>+91 8484041805</p>
+<p>email- zayaankhan337@gmail.com</p>
 
+</div>
+<div class="col">
+  <h6>navigation link</h6>
+  <ul>
+    <li>RAUL</li>
+  <li>KAKA</li>
+<li>MALDINI</li>
+<li>SOCRATES</li>
+<li>TORRES</li>
+  </ul>
+</div>
+<div class="col">
+  <i class="fa-brands fa-instagram"></i> _zayaan_khan_ <br>
+  <i class="fa-solid fa-envelope"></i> zayaankhan337@gmail.com <br>
+  <i class="fa-brands fa-whatsapp"></i> +91 8484041805
+</div>
+
+</div>
+
+</div>
 
 
 
