--- a/kaka.html
+++ b/kaka.html
@@ -20,7 +20,31 @@
     In 2001, at age 18, Kaká made his professional debut at Brazilian club São Paulo, and his club performances led to Serie A club AC Milan signing him in 2003. In Italy, Kaká helped Milan win the Serie A title in his first season. Milan finished runner-up in the 2004–05 UEFA Champions League with Kaká being the top assist provider of the tournament, and he was named the UEFA Club Midfielder of the Year. He led Milan to win the 2006–07 UEFA Champions League and was the tournament's top goal scorer. His performances saw him win the FIFA World Player of the Year, the 2007 Ballon d'Or, and the UEFA Club Footballer of the Year. After six years with Milan, Kaká joined Real Madrid in 2009 for a transfer fee of €67 million,[12] which was the second highest transfer fee at the time. However, his four seasons in Madrid were plagued with injuries, which saw his pace decline. He returned to AC Milan for a single season in 2013, prior to joining MLS expansion club Orlando City SC. He initially went on loan to his former club São Paulo before returning to Orlando in 2015 and retiring from professional football in 2017.</p>
 
 
-
+    <div class="container-fluid bg-dark text-white mt-5 p-5">
+        <div class="row">
+        <div class="col">
+        <h6>
+        contact info- 
+        </h6>
+        <p>+91 8484041805</p>
+        <p>email- zayaankhan337@gmail.com</p>
+        
+        </div>
+        <div class="col">
+          <h6>navigation link</h6>
+          <ul>
+            <li>RAUL</li>
+          <li>KAKA</li>
+        <li>MALDINI</li>
+        <li>SOCRATES</li>
+        <li>TORRES</li>
+          </ul>
+        </div>
+        <div class="col">
+          <i class="fa-brands fa-instagram"></i> _zayaan_khan_ <br>
+          <i class="fa-solid fa-envelope"></i> zayaankhan337@gmail.com <br>
+          <i class="fa-brands fa-whatsapp"></i> +91 8484041805
+        </div>
 
 
 
