--- a/maldini.html
+++ b/maldini.html
@@ -35,3 +35,28 @@ Milan again became a dominant force in Italy and in Europe under Carlo Ancelotti
 Milan won the 2002–03 Champions League with Maldini as their captain for the first time in his career, in the first all-Italian final, against Juventus, on 28 May 2003 at Old Trafford. Maldini helped Milan keep a clean sheet, as they defeated Juventus 3–2 on penalties after a 0–0 deadlock following extra time. On that day, it was exactly 40 years since his father, Cesare, had also lifted the European Cup trophy as Milan's captain, also in England.[47] He and his father are only one of three other father-son pairs to have also done so; the others being Manuel and Manolo Sanchís of Real Madrid, and Carles and Sergio Busquets of Barcelona. Maldini was elected Man of the Match and was named in the UEFA Team of the Year for the first time in his career.[31][32]
 
 The following season, Milan were defeated by Juventus on penalties in the Supercoppa Italiana, and in the Intercontinental Cup final by Boca Juniors, once again on penalties, but managed to defeat Porto to capture yet another UEFA Super Cup. Maldini placed third in the 2003 Ballon d'Or for the second time in his career. Maldini went on to captain Milan to win the Serie A title that season, with a record 82 points, whilst Milan were eliminated in the semi-finals of the Coppa Italia by Lazio, and in the quarter-finals of the Champions League by Deportivo de La Coruña. In April 2004, Maldini placed tenth on the UEFA Golden Jubilee Poll, an online UEFA survey, which was organised to commemorate the best European footballers of the past 50 years. Maldini was the second-highest placed Italian after Dino Zoff.[48] Maldini was also included in the FIFA 100 list in 2004, which was a selection of the 125 greatest living footballers, chosen by Pelé. Following his Series A-winning performances, Maldini was elected to be the Serie A Defender of the Year in 2004 at the Italian footballing Awards.[31][32]
+<div class="container-fluid bg-dark text-white mt-5 p-5">
+    <div class="row">
+    <div class="col">
+    <h6>
+    contact info- 
+    </h6>
+    <p>+91 8484041805</p>
+    <p>email- zayaankhan337@gmail.com</p>
+    
+    </div>
+    <div class="col">
+      <h6>navigation link</h6>
+      <ul>
+        <li>RAUL</li>
+      <li>KAKA</li>
+    <li>MALDINI</li>
+    <li>SOCRATES</li>
+    <li>TORRES</li>
+      </ul>
+    </div>
+    <div class="col">
+      <i class="fa-brands fa-instagram"></i> _zayaan_khan_ <br>
+      <i class="fa-solid fa-envelope"></i> zayaankhan337@gmail.com <br>
+      <i class="fa-brands fa-whatsapp"></i> +91 8484041805
+    </div>
