--- a/temp.html
+++ b/temp.html
@@ -132,4 +132,30 @@
   </div>
 
   
+
 </div>
+<div class="container-fluid bg-dark text-white mt-5 p-5">
+  <div class="row">
+  <div class="col">
+  <h6>
+  contact info- 
+  </h6>
+  <p>+91 8484041805</p>
+  <p>email- zayaankhan337@gmail.com</p>
+  
+  </div>
+  <div class="col">
+    <h6>navigation link</h6>
+    <ul>
+      <li>RAUL</li>
+    <li>KAKA</li>
+  <li>MALDINI</li>
+  <li>SOCRATES</li>
+  <li>TORRES</li>
+    </ul>
+  </div>
+  <div class="col">
+    <i class="fa-brands fa-instagram"></i> _zayaan_khan_ <br>
+    <i class="fa-solid fa-envelope"></i> zayaankhan337@gmail.com <br>
+    <i class="fa-brands fa-whatsapp"></i> +91 8484041805
+  </div>
