--- a/kaka.html
+++ b/kaka.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head >
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Document</title>
@@ -12,14 +12,20 @@
 
  <!-- link to personal CSS -->
  <link rel="stylesheet" href="style.css">
-</head>
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Satisfy&display=swap" rel="stylesheet">
+
+</head >
 <body>
- <h1>kaka</h1>
-<p>Ricardo Izecson dos Santos Leite (Brazilian Portuguese: [ʁiˈkaʁdu iˈzɛksõ duˈsɐ̃tuz ˈlejtʃi]; born 22 April 1982), commonly known as Kaká (Portuguese: [kaˈka] ⓘ) or Ricardo Kaká,[4][5] is a Brazilian former professional footballer who played as an attacking midfielder. In his prime as a playmaker at AC Milan, where he was known for his passing, pace, goalscoring, and dribbling, Kaká was widely regarded as one of the greatest players of his generation.[6][7][8][9] With success for both club and country, he is one of the nine players to win the FIFA World Cup, the UEFA Champions League, and the Ballon d'Or.[10][11]
+ <h1 class="pacifico-regular text-center m-5 " >kaka</h1>
+<p class="satisfy-regular container">Ricardo Izecson dos Santos Leite (Brazilian Portuguese: [ʁiˈkaʁdu iˈzɛksõ duˈsɐ̃tuz ˈlejtʃi]; born 22 April 1982), commonly known as Kaká (Portuguese: [kaˈka] ⓘ) or Ricardo Kaká,[4][5] is a Brazilian former professional footballer who played as an attacking midfielder. In his prime as a playmaker at AC Milan, where he was known for his passing, pace, goalscoring, and dribbling, Kaká was widely regarded as one of the greatest players of his generation.[6][7][8][9] With success for both club and country, he is one of the nine players to win the FIFA World Cup, the UEFA Champions League, and the Ballon d'Or.[10][11]
 
     In 2001, at age 18, Kaká made his professional debut at Brazilian club São Paulo, and his club performances led to Serie A club AC Milan signing him in 2003. In Italy, Kaká helped Milan win the Serie A title in his first season. Milan finished runner-up in the 2004–05 UEFA Champions League with Kaká being the top assist provider of the tournament, and he was named the UEFA Club Midfielder of the Year. He led Milan to win the 2006–07 UEFA Champions League and was the tournament's top goal scorer. His performances saw him win the FIFA World Player of the Year, the 2007 Ballon d'Or, and the UEFA Club Footballer of the Year. After six years with Milan, Kaká joined Real Madrid in 2009 for a transfer fee of €67 million,[12] which was the second highest transfer fee at the time. However, his four seasons in Madrid were plagued with injuries, which saw his pace decline. He returned to AC Milan for a single season in 2013, prior to joining MLS expansion club Orlando City SC. He initially went on loan to his former club São Paulo before returning to Orlando in 2015 and retiring from professional football in 2017.</p>
-
-
+<div class="container"><iframe width="560" height="315" src="https://www.youtube.com/embed/xcpHXfmK1kU?si=8B6xlUdAzKsjh7RW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
     <div class="container-fluid bg-dark text-white mt-5 p-5">
         <div class="row">
         <div class="col">
