--- a/kaka.html
+++ b/kaka.html
@@ -21,6 +21,33 @@
 
 </head >
 <body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">⚽RETRO STARS⚽</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="raul.html">RAUL</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="kaka.html">KAKA</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="maldini.html">MALDINI</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="socrates.html">SOCRATES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="torres.html">TORRES</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
  <h1 class="pacifico-regular text-center m-5 " >kaka</h1>
 <p class="satisfy-regular container">Ricardo Izecson dos Santos Leite (Brazilian Portuguese: [ʁiˈkaʁdu iˈzɛksõ duˈsɐ̃tuz ˈlejtʃi]; born 22 April 1982), commonly known as Kaká (Portuguese: [kaˈka] ⓘ) or Ricardo Kaká,[4][5] is a Brazilian former professional footballer who played as an attacking midfielder. In his prime as a playmaker at AC Milan, where he was known for his passing, pace, goalscoring, and dribbling, Kaká was widely regarded as one of the greatest players of his generation.[6][7][8][9] With success for both club and country, he is one of the nine players to win the FIFA World Cup, the UEFA Champions League, and the Ballon d'Or.[10][11]
 
