--- a/maldini.html
+++ b/maldini.html
@@ -22,8 +22,35 @@
 
 
 <body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">⚽RETRO STARS⚽</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="raul.html">RAUL</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="kaka.html">KAKA</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="maldini.html">MALDINI</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="socrates.html">SOCRATES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="torres.html">TORRES</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
  <h1 class="pacifico-regular text-center m-5 ">MALDINI</h1>
-
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/_vJb-ag2a6s?si=zSUTBwgNKydx8W9N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
   <p class="satisfy-regular container">Paolo Cesare Maldini Ufficiale OMRI (Italian pronunciation: [ˈpaːolo malˈdiːni];[6] born 26 June 1968) is an Italian former professional footballer who played primarily as a left-back and centre-back for AC Milan and the Italy national team. He is widely regarded as one of the greatest defenders of all time.[7][8][9][10][11][12] As the Milan and Italy captain for many years, he was nicknamed "Il Capitano". Maldini held the record for most appearances in Serie A, with 647 appearances, until 2020, when he was overtaken by Gianluigi Buffon. He also holds the joint-record for most European Cup/UEFA Champions League final appearances (8) alongside Paco Gento.[13][14] He most recently worked as a technical director for Milan, as well as being co-owner of USL Championship club Miami FC.
