--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">RAUL</a>
+                <a class="nav-link active" aria-current="page" href="raul.html">RAUL</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">KAKA</a>
+                <a class="nav-link active" aria-current="page" href="kaka.html">KAKA</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">MALDINI</a>
+                <a class="nav-link active" aria-current="page" href="maldini.html">MALDINI</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">SOCRATES</a>
+                <a class="nav-link active" aria-current="page" href="socrates.html">SOCRATES</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">TORRES</a>
+                <a class="nav-link active" aria-current="page" href="torres.html">TORRES</a>
               </li>
             </ul>
           </div>
@@ -151,22 +151,6 @@
 <div class="row">
 
 
-<div class="col-8">The history of Ricardo Izecson dos Santos Leite, also known as Kaká, is marked by many accomplishments both on and off the field: 
-  Early career: Kaká started playing for São Paulo at age eight, and made his senior debut in 2001. He led the team to their first Torneio Rio-São Paulo championship. 
-  Transfer to Milan: In 2003, Kaká was signed by AC Milan for $8.5 million. 
-  World Cup appearances: Kaká was selected for Brazil's World Cup squads in 2002, 2006, and 2010. He led the 2010 tournament in assists. 
-  FIFA World Player of the Year: In 2007, Kaká was named FIFA World Player of the Year. 
-  Ballon d'Or: Kaká won the Ballon d'Or in 2007. 
-  Transfer to Real Madrid: In 2009, Kaká transferred to Real Madrid. 
-  Humanitarian work: Kaká became the youngest ambassador of the UN World Food Programme in 2004. 
-  Time 100: Kaká was named in the Time 100 list of the world's most influential people in 2008 and 2009. </div>
-
-<div class="c
-  ol-4"><imgV1
-</img></div>
-
-</div>
-</div>
 
 
 
