--- a/raul.html
+++ b/raul.html
@@ -12,11 +12,49 @@
 
     <!-- link to personal CSS -->
      <link rel="stylesheet" href="style.css">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Satisfy&display=swap" rel="stylesheet">
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">⚽RETRO STARS⚽</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="raul.html">RAUL</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="kaka.html">KAKA</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="maldini.html">MALDINI</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="socrates.html">SOCRATES</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="torres.html">TORRES</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-    <h1>Raul History</h1>
-    <p>He is the current manager of Real Madrid Castilla, the reserve team of La Liga club Real Madrid. Raúl is regarded as one of the greatest players of his generation[3][4][5] and one of the greatest Spanish players of all time.[6][7]
+    
+    
+  <h1 class="pacifico-regular text-center m-5 ">RAUL</h1>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/4vmHSO1vACM?si=DurnFmubuvWV4A8c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+  
+  <p class="satisfy-regular container">He is the current manager of Real Madrid Castilla, the reserve team of La Liga club Real Madrid. Raúl is regarded as one of the greatest players of his generation[3][4][5] and one of the greatest Spanish players of all time.[6][7]
 
         Raúl was born in the San Cristóbal de los Ángeles neighborhood of Madrid and he played for their youth academy. In 1994, he made his professional debut with Real Madrid’s C team and was swiftly promoted to the first team.
         Raúl's career began at his local team CD San Cristóbal de los Ángeles playing for their Alevín team and the Infantil the next season.[13][14] He signed with Atlético Madrid's Infantil team and won a national title with the Cadete team the following season. Following Atlético's then-president Jesús Gil decision to close their youth academy as a cost-saving measure, Raúl moved on to Real Madrid's Cadete team in La Fábrica. The following season, he was promoted to the Juvenil C team and subsequently went on to play for their Juvenil B and Juvenil A team.[15] While with the Real youth set-up, Raúl won the Dallas Cup in 1993 and 1994.[16]
